[gd_scene format=3 uid="uid://bheaxykbajhrl"]

[ext_resource type="Texture2D" uid="uid://b48i4023avatc" path="res://assets/textures/ui/health_bar.png" id="1_0g2kp"]
[ext_resource type="Script" uid="uid://c7ugtj8o85e1p" path="res://ui/hud/player health bar/player_health_bar.gd" id="1_oybee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oybee"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8ve3"]
bg_color = Color(0.9192808, 4.47616e-06, 1.1551381e-06, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u53c0"]
bg_color = Color(0.18431373, 0.18431373, 0.18431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oybee"]
bg_color = Color(0.8117647, 0.7921569, 0, 1)

[node name="PlayerHealthBar" type="Control" unique_id=1403324126]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_oybee")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=602115910]
custom_minimum_size = Vector2(40, 20)
layout_mode = 1
offset_left = 34.0
offset_top = 31.0
offset_right = 179.0
offset_bottom = 51.0
scale = Vector2(3, 3)

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer" unique_id=1108325913]
layout_mode = 2
texture = ExtResource("1_0g2kp")
patch_margin_left = 27
patch_margin_right = 7

[node name="HpBar" type="ProgressBar" parent="MarginContainer/NinePatchRect" unique_id=1261569105]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.999998
offset_top = 6.0
offset_right = -3.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_oybee")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8ve3")
value = 50.0
rounded = true
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="MarginContainer/NinePatchRect/HpBar" unique_id=400177210]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u53c0")
theme_override_styles/fill = SubResource("StyleBoxFlat_oybee")
value = 70.0
rounded = true
show_percentage = false

[node name="DamageTimer" type="Timer" parent="MarginContainer/NinePatchRect/HpBar" unique_id=277275174]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="MarginContainer/NinePatchRect/HpBar/DamageTimer" to="." method="_on_damage_timer_timeout"]
